Jenkins book jobs: free-style job added